maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:3: error: identifier expected but integer literal found.
  var X = trouverBiscuit()[0]
                           ^JediEscaper:4: error: ']' expected but ';' found.
  var Y = trouverBiscuit()[1]
^JediEscaper:4: error: identifier expected but integer literal found.
  var Y = trouverBiscuit()[1]
                           ^JediEscaper:5: error: ']' expected but ';' found.
  setIndication(X,Y,0)
^